fixes issue that was causing the category names to be displayed with overflow ellipsis in chrome

--- a/styles/main.less
+++ b/styles/main.less
@@ -209,8 +209,6 @@
     cursor: pointer;
     border-bottom: 2px solid transparent;
     white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
     &:hover{
       color: @red;
     }
